--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
+    "dev-turbo": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "create-admin": "tsx scripts/create-admin.ts"
+    "create-admin": "tsx scripts/create-admin.ts",
+    "check-admin": "tsx scripts/check-admin.ts",
+    "create-companies": "tsx scripts/create-sample-companies.ts"
   },
   "dependencies": {
     "@radix-ui/react-collapsible": "^1.1.11",
@@ -15,14 +18,17 @@
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@types/nodemailer": "^6.4.17",
     "bcryptjs": "^2.4.3",
     "cmdk": "^1.1.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.525.0",
     "mongoose": "^8.16.1",
     "next": "15.3.4",
+    "nodemailer": "^7.0.5",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "resend": "^4.6.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
