--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/nodemailer": "^6.4.17",
     "bcryptjs": "^2.4.3",
     "cmdk": "^1.1.1",
+    "dotenv": "^17.2.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.525.0",
     "mongoose": "^8.16.1",
